objects/Reference_Perk__c.object
<CustomObject>
    <description>A Reference Perk is offered to an Ambassador Institution.  Any contact at the Institution may take advantage of the perk.</description>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicable_Reference_Module__c</fullName>
        <label>Applicable Reference Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Perks</relationshipLabel>
        <relationshipName>Reference_Perks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>TODAY() &gt; Expiration_Date__c</formula>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perk_Available_Date__c</fullName>
        <formula>IF( ISBLANK( Perk_Template__c ),
  Available_Date__c,
  Perk_Template__r.Available_Date__c
)</formula>
        <label>Perk Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perk_Event_Date__c</fullName>
        <formula>Perk_Template__r.Event_Date__c</formula>
        <label>Perk Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perk_Expiration_Date__c</fullName>
        <formula>IF( ISBLANK( Perk_Template__c ),
  Expiration_Date__c,
  Perk_Template__r.Expiration_Date__c
)</formula>
        <label>Perk Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perk_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Perk Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or the Record Type is not Perk Template</errorMessage>
            <filterItems>
                <field>Reference_Perk__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Perk Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference_Perk__c</referenceTo>
        <relationshipLabel>Reference Perks</relationshipLabel>
        <relationshipName>Reference_Perks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Perk__c</fullName>
        <label>Reference Perk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference</label>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Reference Perks</relationshipLabel>
        <relationshipName>Reference_Perks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY() &gt;= Perk_Available_Date__c,
  IF(TODAY() &gt; Perk_Expiration_Date__c,
    &quot;Expired&quot;,
    IF(NOT( ISBLANK( Acceptance_Date__c ) ),
      &quot;Accepted&quot;,
      &quot;Available&quot;
	)
  ),
  &quot;Unavailable&quot;
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Reference Perk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Perk_Template__c</columns>
        <columns>Applicable_Reference_Module__c</columns>
        <columns>Perk_Available_Date__c</columns>
        <columns>Perk_Expiration_Date__c</columns>
        <columns>Perk_Event_Date__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Gratis_Travel_2016</fullName>
        <columns>Applicable_Reference_Module__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contact__c</columns>
        <columns>Perk_Available_Date__c</columns>
        <columns>Perk_Expiration_Date__c</columns>
        <columns>Acceptance_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reference_Perk__c.PT</value>
        </filters>
        <label>Gratis Travel 2016</label>
    </listViews>
    <listViews>
        <fullName>Performance_Technology_Perks</fullName>
        <columns>NAME</columns>
        <columns>Perk_Template__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Perk_Available_Date__c</columns>
        <columns>Perk_Event_Date__c</columns>
        <columns>Perk_Expiration_Date__c</columns>
        <columns>Expired__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reference_Perk__c.PT</value>
        </filters>
        <label>Performance Technology Perks</label>
    </listViews>
    <listViews>
        <fullName>Perk_Templates</fullName>
        <columns>NAME</columns>
        <columns>Applicable_Reference_Module__c</columns>
        <columns>Status__c</columns>
        <columns>Available_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Expired__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reference_Perk__c.Perk_Template</value>
        </filters>
        <label>Perk Templates</label>
    </listViews>
    <nameField>
        <label>Reference Perk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Perks</pluralLabel>
    <recordTypes>
        <fullName>PT</fullName>
        <active>true</active>
        <description>Reference Perks related to the PT Reference Program</description>
        <label>PT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Perk_Template</fullName>
        <active>true</active>
        <description>Create a template record that can be referenced on Reference Perks.</description>
        <label>Perk Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Available_Date_must_be_after_Exp_Date</fullName>
        <active>true</active>
        <description>Available Date must be prior to the Expiration Date.</description>
        <errorConditionFormula>Available_Date__c &gt; Expiration_Date__c</errorConditionFormula>
        <errorDisplayField>Available_Date__c</errorDisplayField>
        <errorMessage>Available Date must be prior to the Expiration Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Eligibility_Of_Reference_Perk</fullName>
        <active>true</active>
        <description>Verify the Reference Perk  is eligible for the selected Reference record.</description>
        <errorConditionFormula>AND( 
  RecordType.DeveloperName == &apos;Performance_Technology&apos;, 
  OR(
    Reference__r.IsActive__c != true,  
    NOT(ISPICKVAL( Reference__r.Reference_Level__c , &apos;Ambassador&apos;)), 
    Perk_Template__r.Status__c  != &apos;Available&apos;, 
    Reference__r.Reference_Module__c != Perk_Template__r.Applicable_Reference_Module__c
  )
)</errorConditionFormula>
        <errorMessage>Reference Perk is not eligible for the selected Reference record.</errorMessage>
    </validationRules>
</CustomObject>